# presidio-hardened-treasury

./: .dockerignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  PRESIDIO-REQ.md  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  fmt-autofix.yml
crates/treasury-anchor/: Cargo.toml
crates/treasury-anchor/src/: aggregation.rs  lib.rs  log.rs  pipeline.rs  policy.rs  receipt.rs  submitter.rs
crates/treasury-anchor/tests/: anchor_lifecycle.rs  anchoring_pipeline.rs
crates/treasury-chainsource/: Cargo.toml
crates/treasury-chainsource/src/: book.rs  finality.rs  history.rs  lib.rs  reconcile.rs  source.rs
crates/treasury-chainsource/tests/: observation_mapping.rs  reconciliation.rs
crates/treasury-close/: Cargo.toml
crates/treasury-close/src/: checkpoint.rs  dag.rs  fold.rs  lib.rs
crates/treasury-close/tests/: close_lifecycle.rs
crates/treasury-conformance/: Cargo.toml
crates/treasury-conformance/src/: anchor_submitter.rs  chain_source.rs  gl_adapter.rs  lib.rs
crates/treasury-conformance/tests/: adversarial.rs  conformance_self_test.rs
crates/treasury-core/: Cargo.toml
crates/treasury-core/src/: amount.rs  dual_control.rs  hash.rs  ids.rs  lib.rs  time.rs
crates/treasury-core/tests/: amount_properties.rs
crates/treasury-disclosure/: Cargo.toml
crates/treasury-disclosure/src/: lib.rs  pack.rs  rollforward.rs
crates/treasury-disclosure/tests/: disclosure_pack.rs
crates/treasury-e2e/: Cargo.toml
crates/treasury-e2e/src/: lib.rs
crates/treasury-e2e/tests/: golden_close.rs  negative_close.rs
crates/treasury-evidence/: Cargo.toml
crates/treasury-evidence/src/: canon.rs  file.rs  lib.rs  merkle.rs  store.rs
crates/treasury-evidence/tests/: canon_properties.rs  durable_store.rs  merkle_properties.rs
crates/treasury-fairvalue/: Cargo.toml
crates/treasury-fairvalue/src/: lib.rs  snapshot.rs  valuation.rs
crates/treasury-fairvalue/tests/: valuation_flow.rs
crates/treasury-gaap/: Cargo.toml
crates/treasury-gaap/src/: entry.rs  lib.rs  module.rs
crates/treasury-gaap/tests/: gaap_module.rs
crates/treasury-gl/: Cargo.toml
crates/treasury-gl/src/: adapter.rs  drive.rs  fixture.rs  lib.rs
crates/treasury-gl/tests/: gl_drive.rs
crates/treasury-ingest/: Cargo.toml
crates/treasury-ingest/src/: allowlist.rs  lib.rs  scope.rs
crates/treasury-ledger/: Cargo.toml
crates/treasury-ledger/src/: event.rs  file.rs  ledger.rs  lib.rs
crates/treasury-ledger/tests/: durable_ledger.rs  ledger_invariants.rs  ledger_properties.rs
crates/treasury-lots/: Cargo.toml
crates/treasury-lots/src/: book.rs  lib.rs  lot.rs
crates/treasury-lots/tests/: lot_lifecycle.rs  lot_properties.rs
crates/treasury-policy/: Cargo.toml
crates/treasury-policy/src/: artifact.rs  lib.rs  registry.rs  valuation.rs
crates/treasury-posting/: Cargo.toml
crates/treasury-posting/src/: batch.rs  lib.rs  protocol.rs
crates/treasury-posting/tests/: posting_protocol.rs
crates/treasury-reconcile/: Cargo.toml
crates/treasury-reconcile/src/: book.rs  config.rs  corpus.rs  decision.rs  designate.rs  leg.rs  lib.rs  matcher.rs  queue.rs  synthetic.rs
crates/treasury-reconcile/tests/: booking_loop.rs  designation_flow.rs  matcher_scenarios.rs  slo_harness.rs
crates/treasury-scope/: Cargo.toml
crates/treasury-scope/src/: assessment.rs  gate.rs  lib.rs
crates/treasury-scope/tests/: scope_gate.rs
docs/: adversarial-review-spec-v1-gpt5.5.md  adversarial-review-spec-v1-grok.md  auditor-evidence-guide.md  flows.html  flows.json  spec-v1-review-assessment-and-remediations.md  threat-model.md  treasury-suite-spec-v1.md  treasury-suite-spec-v2.md
docs/adr/: 0001-chain-indexing-build-vs-buy.md  0002-anchor-submission-target.md  0003-gl-adapter-priority.md  0004-node-indexer-selection.md  0005-approval-identity-binding.md  0006-enclave-hsm-xpub-derivation.md  0007-multitenant-serving-side-channel.md  0008-ifrs-measurement-model.md  README.md
