[workspace]
resolver = "2"
members = [
    "crates/treasury-core",
    "crates/treasury-evidence",
    "crates/treasury-ledger",
    "crates/treasury-policy",
    "crates/treasury-close",
    "crates/treasury-anchor",
    "crates/treasury-ingest",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/presidio-v/presidio-hardened-treasury"
authors = ["PRESIDIO Group <vladimir@presidio-group.eu>"]

[workspace.dependencies]
treasury-core = { path = "crates/treasury-core", version = "0.3.0" }
treasury-evidence = { path = "crates/treasury-evidence", version = "0.3.0" }
treasury-ledger = { path = "crates/treasury-ledger", version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
hex = "0.4"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
float_arithmetic = "deny"
pedantic = { level = "warn", priority = -1 }

[profile.release]
overflow-checks = true
