[workspace]
resolver = "2"
members = [
    "crates/treasury-core",
    "crates/treasury-evidence",
    "crates/treasury-ledger",
    "crates/treasury-policy",
    "crates/treasury-close",
    "crates/treasury-anchor",
    "crates/treasury-ingest",
    "crates/treasury-reconcile",
    "crates/treasury-scope",
    "crates/treasury-lots",
    "crates/treasury-fairvalue",
    "crates/treasury-gaap",
    "crates/treasury-posting",
    "crates/treasury-disclosure",
    "crates/treasury-gl",
    "crates/treasury-e2e",
]

[workspace.package]
version = "0.17.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/presidio-v/presidio-hardened-treasury"
authors = ["PRESIDIO Group <vladimir@presidio-group.eu>"]

[workspace.dependencies]
treasury-core = { path = "crates/treasury-core", version = "0.17.0" }
treasury-evidence = { path = "crates/treasury-evidence", version = "0.17.0" }
treasury-ledger = { path = "crates/treasury-ledger", version = "0.17.0" }
treasury-policy = { path = "crates/treasury-policy", version = "0.17.0" }
treasury-lots = { path = "crates/treasury-lots", version = "0.17.0" }
treasury-gaap = { path = "crates/treasury-gaap", version = "0.17.0" }
treasury-fairvalue = { path = "crates/treasury-fairvalue", version = "0.17.0" }
treasury-close = { path = "crates/treasury-close", version = "0.17.0" }
treasury-anchor = { path = "crates/treasury-anchor", version = "0.17.0" }
treasury-reconcile = { path = "crates/treasury-reconcile", version = "0.17.0" }
treasury-scope = { path = "crates/treasury-scope", version = "0.17.0" }
treasury-posting = { path = "crates/treasury-posting", version = "0.17.0" }
treasury-gl = { path = "crates/treasury-gl", version = "0.17.0" }
treasury-disclosure = { path = "crates/treasury-disclosure", version = "0.17.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
hex = "0.4"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
float_arithmetic = "deny"
pedantic = { level = "warn", priority = -1 }

[profile.release]
overflow-checks = true
