[package]
name = "treasury-anchor"
description = "External anchoring of evidence-store tree heads: content-addressed anchor receipts in an append-only, coverage-monotonic log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
treasury-core = { workspace = true }
treasury-evidence = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
