[package]
name = "treasury-core"
description = "Domain primitives for the presidio-hardened treasury: identifiers, integer money, bitemporal timestamps, content hashes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
