[package]
name = "treasury-fairvalue"
description = "Fair-value engine: integer-exact valuation as a pure function of (lots, price-snapshot, policy); fail-closed on missing prices; content-addressed valuation reports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
treasury-core = { workspace = true }
treasury-evidence = { workspace = true }
treasury-policy = { workspace = true }
treasury-lots = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
