[package]
name = "treasury-gl"
description = "Vendor-agnostic GL adapter contract (read-back mandatory by type) and the lifecycle orchestration that drives the posting protocol against any adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
treasury-core = { workspace = true }
treasury-evidence = { workspace = true }
treasury-gaap = { workspace = true }
treasury-posting = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
