[package]
name = "treasury-ingest"
description = "Read-only ingestion boundary: content-addressed egress allowlists (deny by default, fail closed) and venue key-scope rejection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
treasury-core = { workspace = true }
treasury-evidence = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
