[package]
name = "treasury-lots"
description = "Lot / cost-basis engine: integer-only lots, fees decomposed from basis, relief order as a policy election, basis-preserving internal transfers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
treasury-core = { workspace = true }
treasury-evidence = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
