[package]
name = "treasury-policy"
description = "Policy-as-code: content-addressed, approval-signed policy artifacts with per-tenant activation timelines, and the (lots, price-snapshot, policy) valuation key"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
treasury-core = { workspace = true }
treasury-evidence = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
