[package]
name = "treasury-reconcile"
description = "Internal-transfer reconciliation: deterministic tiered matcher, materiality-gated auto-netting, dual-control confirmation queue, close blockers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
treasury-core = { workspace = true }
treasury-evidence = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
