[package]
name = "treasury-scope"
description = "ASU 2023-08 scope gate: six-criteria asset assessment under dual control; unassessed or out-of-scope assets hard-block, never silently mis-value"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
treasury-core = { workspace = true }
treasury-evidence = { workspace = true }
treasury-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
